<resources>
    <string name="app_name">New Deluxe Fast Food</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log in</string>
    <string name="sigh_up_here">Not registered? Sigh up here.</string>
    <string name="register">Register</string>

    <string name="price">Price: </string>

    <string name="Item1Spinner1">Choose weight in kg</string>
    <string-array name="Chicken65kg">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="Chicken65gm">
        <item>0</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
    </string-array>

    <string-array name="lollipopPieces">
        <item>3</item>
        <item>6</item>
        <item>9</item>
        <item>12</item>
        <item>15</item>
        <item>18</item>
    </string-array>
    <string name="title_activity_order_screen">Order Summary</string>
    <string name="tab_text_1">Current Order</string>
    <string name="tab_text_2">Previous Orders</string>
    <string name="title_activity_order_summay_screen">OrderSummayScreen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
